--- a/references.bib
+++ b/references.bib
@@ -551,6 +551,17 @@
   publisher={University of Chicago Press}
 }
 
+@article{hadfield2010general,
+  title={General quantitative genetic methods for comparative biology: phylogenies, taxonomies and multi-trait models for continuous and categorical characters},
+  author={Hadfield, JD and Nakagawa, S},
+  journal={Journal of evolutionary biology},
+  volume={23},
+  number={3},
+  pages={494--508},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
 @article{olivier2022revisiting,
   title={Revisiting the components of Macroscelidea social systems: Evidence for variable social organization, including pair-living, but not for a monogamous mating system},
   author={Olivier, Charlotte-ana{\"\i}s and Jaeggi, Adrian V and Hayes, Loren D and Schradin, Carsten},
