--- a/references.bib
+++ b/references.bib
@@ -17,6 +17,17 @@
   publisher={Elsevier}
 }
 
+@article{lynch1991methods,
+  title={Methods for the analysis of comparative data in evolutionary biology},
+  author={Lynch, Michael},
+  journal={Evolution},
+  volume={45},
+  number={5},
+  pages={1065--1080},
+  year={1991},
+  publisher={Wiley Online Library}
+}
+
 @article{cornwallis2017cooperation,
   title={Cooperation facilitates the colonization of harsh environments},
   author={Cornwallis, Charlie K and Botero, Carlos A and Rubenstein, Dustin R and Downing, Philip A and West, Stuart A and Griffin, Ashleigh S},
@@ -561,6 +572,8 @@
   year={2010},
   publisher={Wiley Online Library}
 }
+
+
 
 @article{olivier2022revisiting,
   title={Revisiting the components of Macroscelidea social systems: Evidence for variable social organization, including pair-living, but not for a monogamous mating system},
