--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,17 @@
   publisher={Company of Biologists}
 }
 
+@article{pagel2022general,
+  title={General statistical model shows that macroevolutionary patterns and processes are consistent with Darwinian gradualism},
+  author={Pagel, Mark and O’Donovan, Ciara and Meade, Andrew},
+  journal={Nature communications},
+  volume={13},
+  number={1},
+  pages={1--12},
+  year={2022},
+  publisher={Nature Publishing Group}
+}
+
 @article{oconnor2022immunity,
   title={Immunity and lifespan: answering long-standing questions with comparative genomics},
   author={O’Connor, Emily A and Cornwallis, Charlie K},
@@ -180,6 +191,17 @@
   pages={748--757},
   year={2007},
   publisher={The University of Chicago Press}
+}
+
+@article{rohle2006comment,
+  title={A comment on phylogenetic correction},
+  author={Rohle, F James},
+  journal={Evolution},
+  volume={60},
+  number={7},
+  pages={1509--1515},
+  year={2006},
+  publisher={Wiley Online Library}
 }
 
 @article{arnold201010ktrees,
